rest-api-tutorial-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-tutorial
  namespace: default
  labels:
    app: rest-api-tutorial
spec:
  selector:
    app: rest-api-tutorial
  ports:
    - protocol: TCP
      port: 9090
      #nodePort: 30074
  type: NodePort
