rest-api-tutorial-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rest-api-tutorial.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rest-api-tutorial
                port:
                  number: 8080
